abstract class IBiometryRepository {
  void saveUseBiometry();
  void deleteUseBiometry();
  bool hasUseBiometry();
}